--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>myproject-33</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=jCZyT26jrYscWL8oQvCpI0FsvYoaSEgM"></script>
   </head>
   <body>
     <div id="app"></div>
